--- a/docker/configs/apache/apache2.conf
+++ b/docker/configs/apache/apache2.conf
@@ -44,7 +44,7 @@ TraceEnable Off
 </Directory>
 
 <Directory /var/www/>
-    Options Indexes FollowSymLinks
+    Options FollowSymLinks
     AllowOverride None
     Require all granted
 </Directory>
