--- a/docker/configs/php/prod.ini
+++ b/docker/configs/php/prod.ini
@@ -19,7 +19,7 @@ log_errors = On
 ; Security
 allow_url_fopen = Off
 allow_url_include = Off
-disable_functions = exec,passthru,shell_exec,system,proc_open,popen,curl_exec,curl_multi_exec,parse_ini_file,show_source
+disable_functions = exec,passthru,shell_exec,system,proc_open,popen,parse_ini_file,show_source
 expose_php = Off
 
 [Date]
