--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,24 @@
-assets/*
-!assets/.gitignore
-protected/runtime/*
-!protected/runtime/.gitignore
-protected/data/*.db
-themes/classic/views/
+#code coverage
+/code_coverage
+
+# composer vendor dir
+/vendor
+/composer.lock
+
+#node_modules
+/node_modules
+
+# phpstorm project files
+.idea
+
+# phpunit
+.phpunit.cache
+.phpunit.result.cache
+phpunit.phar
+phpunit.xml
+
+#yii3 config packages
+/config/packages
+
+# windows thumbnail cache
+Thumbs.db
