--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
         build-args: |
           BUILD_TYPE=${{ matrix.build_type }}
           PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
-        cache-from: type=gha,scope=${{ github.ref_name }}-${{ matrix.build_type }}
+        cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
 
     - name: Build and Push
       if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false
@@ -90,8 +90,8 @@ jobs:
         build-args: |
           BUILD_TYPE=${{ matrix.build_type }}
           PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
-        cache-from: type=gha,scope=${{ github.ref_name }}-${{ matrix.build_type }}
-        cache-to: type=gha,mode=max,scope=${{ github.ref_name }}-${{ matrix.build_type }}
+        cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+        cache-to: type=gha,mode=max,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
 
     - name: Show result.
       run: |
