--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,11 @@ jobs:
       contents: read
       packages: write
 
+    strategy:
+      fail-fast: false
+      matrix:
+        build_type: [dev, full, prod]
+
     steps:
     - name: Checkout.
       uses: actions/checkout@v5
@@ -42,20 +47,40 @@ jobs:
     - name: Prepare tags.
       id: tags
       run: |
+        BASE_NAME="${{ env.REGISTRY }}/${{ github.repository_owner }}/apache"
+        BUILD_TYPE="${{ matrix.build_type }}"
+        PHP_VERSION="8.4"
+        echo "BASE_NAME=${BASE_NAME}" >> "$GITHUB_OUTPUT"
+        echo "PHP_VERSION=${PHP_VERSION}" >> "$GITHUB_OUTPUT"
+
         if [[ "${{ github.event_name }}" == "pull_request" ]]; then
           # For PRs: use PR number
-          echo "TAG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:pr-${{ github.event.number }}" >> $GITHUB_OUTPUT
+          echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-pr-${{ github.event.number }}" >> $GITHUB_OUTPUT
         elif [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-          # For main: latest + short SHA
+          # For main: stable tags + short SHA
           SHORT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
-          echo "TAG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest,${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${SHORT_SHA}" >> $GITHUB_OUTPUT
+          echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE},${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-sha-${SHORT_SHA}" >> $GITHUB_OUTPUT
         else
           # Other branches: use branch name
           BRANCH_NAME=${GITHUB_REF#refs/heads/}
-          echo "TAG=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${BRANCH_NAME}" >> $GITHUB_OUTPUT
+          echo "TAG=${BASE_NAME}:${PHP_VERSION}-debian-${BUILD_TYPE}-${BRANCH_NAME}" >> $GITHUB_OUTPUT
         fi
 
-    - name: Build and Push.
+    - name: Build Only (PRs from Forks).
+      if: github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile.apache
+        push: false
+        tags: ${{ steps.tags.outputs.TAG }}
+        build-args: |
+          BUILD_TYPE=${{ matrix.build_type }}
+          PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
+        cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+
+    - name: Build and Push
+      if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false
       uses: docker/build-push-action@v5
       with:
         context: .
@@ -63,14 +88,14 @@ jobs:
         push: ${{ github.event_name == 'push' }}
         tags: ${{ steps.tags.outputs.TAG }}
         build-args: |
-          PHP_VERSION=8.4
-          BUILD_TYPE=dev
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+          BUILD_TYPE=${{ matrix.build_type }}
+          PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
+        cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+        cache-to: type=gha,mode=max,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
 
     - name: Show result.
       run: |
-        echo "🎉 Build completed!"
+        echo "🎉 Build completed for ${{ matrix.build_type }}!"
         echo "Event: ${{ github.event_name }}"
         echo "Tags: ${{ steps.tags.outputs.TAG }}"
         if [[ "${{ github.event_name }}" == "push" ]]; then
