--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,6 +78,8 @@ jobs:
           BUILD_TYPE=${{ matrix.build_type }}
           PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
         cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+        provenance: false
+        sbom: false
 
     - name: Build and Push
       if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false
@@ -92,6 +94,8 @@ jobs:
           PHP_VERSION=${{ steps.tags.outputs.PHP_VERSION }}
         cache-from: type=gha,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
         cache-to: type=gha,mode=max,scope=${{ github.head_ref || github.ref_name }}-${{ matrix.build_type }}
+        provenance: false
+        sbom: false
 
     - name: Show result.
       run: |
