feat(apache): Enhance logging, permission management, signal handling, PHP config, and apache validation.

--- a/src/config/apache/vhost.conf
+++ b/src/config/apache/vhost.conf
@@ -3,50 +3,51 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
     DocumentRoot /var/www/app/web
-    
+
+    # Directory configuration
     <Directory /var/www/app/web>
         Options -Indexes +FollowSymLinks
         AllowOverride All
         Require all granted
-        
+
         # Yii2 URL rewriting
         RewriteEngine On
-        
+
         # Redirect trailing slashes if not a directory
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteCond %{REQUEST_URI} (.+)/$
         RewriteRule ^ %1 [L,R=301]
-        
+
         # Send all non-existing files to index.php
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
         RewriteRule . index.php [L]
     </Directory>
-    
+
     # Protect sensitive directories
     <Directory /var/www/app/runtime>
         Require all denied
     </Directory>
-    
+
     <Directory /var/www/app/vendor>
         Require all denied
     </Directory>
-    
+
     <Directory /var/www/app/tests>
         Require all denied
     </Directory>
-    
+
     <Directory /var/www/app/config>
         Require all denied
     </Directory>
-    
+
     # Compression
     <IfModule mod_deflate.c>
         AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css
         AddOutputFilterByType DEFLATE text/javascript application/javascript application/json
         AddOutputFilterByType DEFLATE application/xml application/xhtml+xml application/rss+xml
     </IfModule>
-    
+
     # Browser caching
     <IfModule mod_expires.c>
         ExpiresActive On
@@ -63,7 +64,7 @@
         ExpiresByType application/x-font-woff2 "access plus 1 year"
         ExpiresByType font/opentype "access plus 1 year"
     </IfModule>
-    
+
     # Security headers
     <IfModule mod_headers.c>
         Header always set X-Frame-Options "SAMEORIGIN"
@@ -71,8 +72,8 @@
         Header always set X-XSS-Protection "1; mode=block"
         Header always set Referrer-Policy "strict-origin-when-cross-origin"
     </IfModule>
-    
-    # Logs
-    ErrorLog ${APACHE_LOG_DIR}/yii2_error.log
-    CustomLog ${APACHE_LOG_DIR}/yii2_access.log combined
+
+    # Direct logs to STDOUT/STDERR for container observability
+    ErrorLog /proc/self/fd/2
+    CustomLog /proc/self/fd/1 combined_with_time
 </VirtualHost>
