--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile.apache
+        file: ./src/flavor/Dockerfile.apache
         push: false
         tags: ${{ steps.tags.outputs.TAG }}
         build-args: |
@@ -86,7 +86,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: .
-        file: ./Dockerfile.apache
+        file: ./src/flavor/Dockerfile.apache
         push: ${{ github.event_name == 'push' }}
         tags: ${{ steps.tags.outputs.TAG }}
         build-args: |
