--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,17 @@ services:
   # Development configuration
   yii2-dev:
     build:
-      context: .
-      dockerfile: Dockerfile.apache
       args:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: dev
-    image: yii2-apache:${PHP_VERSION:-8.4}-debian-dev
+      context: .
+      dockerfile: ./src/flavor/Dockerfile.apache
+    cap_add:
+      - NET_BIND_SERVICE
     container_name: yii2-dev
     hostname: yii2-dev
+    image: yii2-apache:${PHP_VERSION:-8.4}-debian-dev
+    user: www-data
     ports:
       - "${HTTP_PORT:-8080}:80"
       - "${HTTPS_PORT:-8443}:443"
@@ -30,14 +33,16 @@ services:
       - ./runtime:/var/www/app/runtime:delegated
       - ./web/assets:/var/www/app/web/assets:delegated
       # SSL certificates (optional)
-      - ./docker/ssl:/etc/apache2/ssl:ro
+      - ./src/ssl:/etc/apache2/ssl:ro
     environment:
       # Apache
       APACHE_DOCUMENT_ROOT: /var/www/app/web
-      APACHE_SERVER_NAME: ${SERVER_NAME:-localhost}
       # PHP
       PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT:-512M}
       PHP_DISPLAY_ERRORS: ${PHP_DISPLAY_ERRORS:-On}
+      PHP_MAX_EXECUTION_TIME: ${PHP_MAX_EXECUTION_TIME:-60}
+      PHP_POST_MAX_SIZE: ${PHP_POST_MAX_SIZE:-100M}
+      PHP_UPLOAD_MAX_FILESIZE: ${PHP_UPLOAD_MAX_FILESIZE:-100M}
       # Xdebug
       XDEBUG_ENABLED: ${XDEBUG_ENABLED:-true}
       XDEBUG_HOST: ${XDEBUG_HOST:-host.docker.internal}
@@ -48,6 +53,8 @@ services:
       # Application
       YII_DEBUG: ${YII_DEBUG:-true}
       YII_ENV: ${YII_ENV:-dev}
+      # Health endpoint
+      ENABLE_HEALTH_ENDPOINT: ${ENABLE_HEALTH_ENDPOINT:-true}
     networks:
       - yii2-network
     depends_on:
@@ -59,17 +66,25 @@ services:
       timeout: 3s
       retries: 3
       start_period: 40s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Production configuration
   yii2-prod:
     build:
-      context: .
-      dockerfile: Dockerfile.apache
       args:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: prod
+      context: .
+      dockerfile: ./src/flavor/Dockerfile.apache
     image: yii2-apache:${PHP_VERSION:-8.4}-debian-prod
+    cap_add:
+      - NET_BIND_SERVICE
     container_name: yii2-prod
+    user: www-data
     profiles: ["prod"]
     ports:
       - "${HTTP_PORT:-80}:80"
@@ -80,27 +95,38 @@ services:
       - ./web/assets:/var/www/app/web/assets:delegated
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/app/web
-      APACHE_SERVER_NAME: ${SERVER_NAME:-localhost}
       PHP_MEMORY_LIMIT: ${PHP_MEMORY_LIMIT:-256M}
       PHP_DISPLAY_ERRORS: Off
+      PHP_MAX_EXECUTION_TIME: ${PHP_MAX_EXECUTION_TIME:-30}
+      PHP_POST_MAX_SIZE: ${PHP_POST_MAX_SIZE:-50M}
+      PHP_UPLOAD_MAX_FILESIZE: ${PHP_UPLOAD_MAX_FILESIZE:-50M}
       YII_DEBUG: false
       YII_ENV: prod
+      ENABLE_HEALTH_ENDPOINT: ${ENABLE_HEALTH_ENDPOINT:-true}
     networks:
       - yii2-network
     depends_on:
       - mysql
       - redis
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   # Full testing configuration
   yii2-full:
     build:
-      context: .
-      dockerfile: Dockerfile.apache
       args:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: full
+      context: .
+      dockerfile: ./src/flavor/Dockerfile.apache
     image: yii2-apache:${PHP_VERSION:-8.4}-debian-full
+    cap_add:
+      - NET_BIND_SERVICE
     container_name: yii2-full
+    user: www-data
     profiles: ["test", "full"]
     ports:
       - "${HTTP_PORT:-8080}:80"
@@ -113,11 +139,14 @@ services:
     environment:
       APACHE_DOCUMENT_ROOT: /var/www/app/web
       PHP_MEMORY_LIMIT: 1G
+      PHP_MAX_EXECUTION_TIME: ${PHP_MAX_EXECUTION_TIME:-120}
+      PHP_POST_MAX_SIZE: ${PHP_POST_MAX_SIZE:-200M}
+      PHP_UPLOAD_MAX_FILESIZE: ${PHP_UPLOAD_MAX_FILESIZE:-200M}
       XDEBUG_ENABLED: true
       XDEBUG_MODE: coverage
       YII_DEBUG: true
       YII_ENV: test
-      # Database connections for testing
+      ENABLE_HEALTH_ENDPOINT: ${ENABLE_HEALTH_ENDPOINT:-true}
       DB_MYSQL_HOST: mysql
       DB_MYSQL_DATABASE: yii2_test
       DB_MYSQL_USERNAME: yii2
@@ -143,6 +172,12 @@ services:
       - mongodb
       - mssql
       - oracle
+    # MEJORA CRÍTICA: Configuración de logging para testing
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "20m"
+        max-file: "5"
 
   # MySQL Database
   mysql:
@@ -153,11 +188,16 @@ services:
       MYSQL_DATABASE: yiitest
     volumes:
       - mysql_data:/var/lib/mysql
-      - ./docker/init-sql/mysql:/docker-entrypoint-initdb.d:ro
+      - ./src/init-sql/mysql:/docker-entrypoint-initdb.d:ro
     ports:
       - "${MYSQL_PORT:-3306}:3306"
     networks:
       - yii2-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # PostgreSQL Database
   postgres:
@@ -170,11 +210,16 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./docker/init-sql/postgres:/docker-entrypoint-initdb.d:ro
+      - ./src/init-sql/postgres:/docker-entrypoint-initdb.d:ro
     ports:
       - "${POSTGRES_PORT:-5432}:5432"
     networks:
       - yii2-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Redis Cache
   redis:
@@ -187,6 +232,11 @@ services:
       - "${REDIS_PORT:-6379}:6379"
     networks:
       - yii2-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # MongoDB
   mongodb:
@@ -199,11 +249,16 @@ services:
       MONGO_INITDB_DATABASE: yii2
     volumes:
       - mongodb_data:/data/db
-      - ./docker/init-js/mongo:/docker-entrypoint-initdb.d:ro
+      - ./src/init-js/mongo:/docker-entrypoint-initdb.d:ro
     ports:
       - "${MONGODB_PORT:-27017}:27017"
     networks:
       - yii2-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Microsoft SQL Server
   mssql:
@@ -220,6 +275,11 @@ services:
       - "${MSSQL_PORT:-1433}:1433"
     networks:
       - yii2-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Oracle Database
   oracle:
@@ -233,6 +293,11 @@ services:
     networks:
       - yii2-network
     shm_size: 1g
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   yii2-network:
