--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # Development configuration
   yii2-dev:
@@ -8,7 +6,7 @@ services:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: dev
       context: .
-      dockerfile: ./src/flavor/Dockerfile.apache
+      dockerfile: ./src/flavor/apache/Dockerfile.apache
     cap_add:
       - NET_BIND_SERVICE
     container_name: yii2-dev
@@ -79,7 +77,7 @@ services:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: prod
       context: .
-      dockerfile: ./src/flavor/Dockerfile.apache
+      dockerfile: ./src/flavor/apache/Dockerfile.apache
     image: yii2-apache:${PHP_VERSION:-8.4}-debian-prod
     cap_add:
       - NET_BIND_SERVICE
@@ -87,8 +85,8 @@ services:
     user: www-data
     profiles: ["prod"]
     ports:
-      - "${HTTP_PORT:-80}:80"
-      - "${HTTPS_PORT:-443}:443"
+      - "${HTTP_PORT:-8080}:80"
+      - "${HTTPS_PORT:-8443}:443"
     volumes:
       - ./app:/var/www/app:ro
       - ./runtime:/var/www/app/runtime:delegated
@@ -108,6 +106,12 @@ services:
     depends_on:
       - mysql
       - redis
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      interval: 30s
+      timeout: 3s
+      retries: 3
+      start_period: 40s
     logging:
       driver: "json-file"
       options:
@@ -121,7 +125,7 @@ services:
         PHP_VERSION: ${PHP_VERSION:-8.4}
         BUILD_TYPE: full
       context: .
-      dockerfile: ./src/flavor/Dockerfile.apache
+      dockerfile: ./src/flavor/apache/Dockerfile.apache
     image: yii2-apache:${PHP_VERSION:-8.4}-debian-full
     cap_add:
       - NET_BIND_SERVICE
@@ -130,6 +134,7 @@ services:
     profiles: ["test", "full"]
     ports:
       - "${HTTP_PORT:-8080}:80"
+      - "${HTTPS_PORT:-8443}:443"
     volumes:
       - ./app:/var/www/app:delegated
       - composer_cache:/var/www/.composer:delegated
@@ -163,6 +168,10 @@ services:
       DB_ORACLE_SID: XE
       DB_ORACLE_USERNAME: yii2
       DB_ORACLE_PASSWORD: ${ORACLE_PASSWORD:-yii2pass}
+      DB_MONGODB_HOST: mongodb
+      DB_MONGODB_DATABASE: yii2_test
+      DB_MONGODB_USERNAME: root
+      DB_MONGODB_PASSWORD: ${MONGO_ROOT_PASSWORD:-mongopass}
     networks:
       - yii2-network
     depends_on:
