--- a/src/flavor/apache/.env.example
+++ b/src/flavor/apache/.env.example
@@ -14,6 +14,22 @@ APACHE_RUN_USER=
 APACHE_SERVER_NAME=
 APACHE_TIMEOUT=
 
+# HTTP/2 and SSL Configuration
+ENABLE_HTTP2=true
+ENABLE_HTTPS=true
+HTTP2_MAX_SESSION_STREAMS=100
+HTTP2_INITIAL_WINDOW_SIZE=65536
+HTTP2_MAX_FRAME_SIZE=16384
+HTTP2_PUSH_ENABLED=true
+HTTP2_EARLY_HINTS=true
+SSL_PROTOCOL=TLSv1.2 TLSv1.3
+SSL_CIPHER_SUITE=ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384
+SSL_HONOR_CIPHER_ORDER=off
+SSL_SESSION_TICKETS=off
+ENABLE_HSTS=true
+HSTS_MAX_AGE=31536000
+ENABLE_OCSP_STAPLING=true
+
 # Composer
 COMPOSER_EXTRA_FLAGS=
 COMPOSER_NO_SCRIPTS=
