feat(docker): Refactor configuration files and scripts for improved readability and organization.

--- a/src/flavor/apache/Dockerfile.apache
+++ b/src/flavor/apache/Dockerfile.apache
@@ -1,14 +1,14 @@
-# =============================================================================
-# Yii2 Docker - PHP 8.4 FPM + Apache with HTTP/2
-# Simplified version using install-php-extensions for everything
-# =============================================================================
+#==============================================================================
+# Yii2 Docker - Debian Trixie + PHP 8.4 FPM + Apache with HTTP/2
+# Supports: full (testing), dev (development), prod (production)
+#==============================================================================
 
 ARG BUILD_TYPE=dev
 ARG PHP_VERSION=8.4
 
-# =============================================================================
+#==============================================================================
 # Base System
-# =============================================================================
+#==============================================================================
 FROM php:${PHP_VERSION}-fpm-trixie AS base
 
 ENV DEBIAN_FRONTEND=noninteractive \
@@ -61,9 +61,9 @@ RUN mkdir -p /var/run/php /var/lib/php/sessions /var/lib/php/tmp \
 RUN echo "www-data ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers.d/www-data \
     && chmod 0440 /etc/sudoers.d/www-data
 
-# =============================================================================
+#==============================================================================
 # Development Build
-# =============================================================================
+#==============================================================================
 FROM base AS dev
 
 # Install dev extensions
@@ -86,13 +86,12 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# =============================================================================
+#==============================================================================
 # Full Testing Build
-# =============================================================================
+#==============================================================================
 FROM dev AS full
 
 # Install Oracle and SQL Server extensions
-# Note: Manual installation for SQL Server due to new Microsoft GPG key in Debian Trixie
 RUN install-php-extensions \
     oci8 \
     pdo_oci \
@@ -128,9 +127,9 @@ RUN set -ex \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# =============================================================================
+#==============================================================================
 # Production Build
-# =============================================================================
+#==============================================================================
 FROM base AS prod
 
 # Install only production extensions
@@ -142,9 +141,9 @@ RUN install-php-extensions \
 RUN apt-get purge -y --auto-remove git \
     && rm -rf /var/www/html/*
 
-# =============================================================================
+#==============================================================================
 # Final Stage
-# =============================================================================
+#==============================================================================
 FROM ${BUILD_TYPE} AS final
 
 ARG BUILD_TYPE
