--- a/src/flavor/apache/config/security-enhanced.conf
+++ b/src/flavor/apache/config/security-enhanced.conf
@@ -1,10 +1,6 @@
-# ============================================================================
-# Enhanced Apache Security Configuration for Yii2 Docker Images
-# Based on security best practices, excluding CloudFlare-specific settings
-# ============================================================================
-
+#==============================================================================
 # Basic Security Settings
-# -----------------------
+#==============================================================================
 
 # Disable access to the entire file system except explicitly allowed directories
 <Directory />
@@ -18,8 +14,9 @@ ServerTokens Prod
 ServerSignature Off
 TraceEnable Off
 
+#==============================================================================
 # Version Control and Sensitive File Protection
-# --------------------------------------------
+#==============================================================================
 
 # Forbid access to version control directories
 <DirectoryMatch "/(\.git|\.svn|\.hg|\.bzr|CVS)">
@@ -51,8 +48,9 @@ TraceEnable Off
     Require all denied
 </FilesMatch>
 
-# Framework-Specific Protection (Yii2)
-# ------------------------------------
+#==============================================================================
+# Framework-Specific Protection
+#==============================================================================
 
 # Protect Yii2 framework directories
 <DirectoryMatch "/(runtime|vendor|tests|config|models|controllers|commands|migrations|mail|widgets|assets/.*\.php)">
@@ -69,8 +67,9 @@ TraceEnable Off
     Require all denied
 </FilesMatch>
 
+#==============================================================================
 # PHP Security
-# ------------
+#==============================================================================
 
 # Deny access to raw PHP sources and includes
 <FilesMatch "\.phps$">
@@ -90,8 +89,9 @@ TraceEnable Off
     Require all denied
 </FilesMatch>
 
+#==============================================================================
 # Enhanced Security Headers
-# ------------------------
+#==============================================================================
 
 <IfModule mod_headers.c>
     # Prevent MIME type sniffing
@@ -124,8 +124,9 @@ TraceEnable Off
     Header always set Cross-Origin-Resource-Policy "same-origin"
 </IfModule>
 
+#==============================================================================
 # HTTPS Security Headers (when SSL is enabled)
-# -------------------------------------------
+#==============================================================================
 
 <IfModule mod_ssl.c>
     <IfModule mod_headers.c>
@@ -137,8 +138,9 @@ TraceEnable Off
     </IfModule>
 </IfModule>
 
+#==============================================================================
 # Directory Listing and Options Security
-# -------------------------------------
+#==============================================================================
 
 # Disable directory browsing globally
 Options -Indexes
@@ -150,16 +152,18 @@ Options -Includes -ExecCGI
 # Note: Comment out if your application requires symlinks
 # Options -FollowSymLinks
 
+#==============================================================================
 # File Upload Security
-# -------------------
+#==============================================================================
 
 # Limit file upload size to prevent DoS (100MB)
 LimitRequestBody 104857600
 
 # Note: HTTP method restrictions are applied in virtual host configuration
 
+#==============================================================================
 # Error Pages Security
-# -------------------
+#==============================================================================
 
 # Custom error pages to prevent information disclosure
 # ErrorDocument 403 /error/403.html
@@ -171,8 +175,9 @@ LimitRequestBody 104857600
     Require all denied
 </FilesMatch>
 
+#==============================================================================
 # Additional Security Measures
-# ---------------------------
+#==============================================================================
 
 # Disable HTTP TRACE method (already set in main config but reinforcing)
 <IfModule mod_rewrite.c>
