--- a/src/php-fpm/docker.conf
+++ b/src/php-fpm/docker.conf
@@ -1,5 +1,6 @@
-; PHP-FPM Docker Configuration
-; Fixed configuration for HTTP/2 testing
+#==============================================================================
+# PHP-FPM Docker Configuration
+#==============================================================================
 
 [global]
 daemonize = no
