--- a/src/php-fpm/prod.conf
+++ b/src/php-fpm/prod.conf
@@ -1,5 +1,7 @@
-; PHP-FPM Production Overrides
-; These settings override the base configuration for production
+#==============================================================================
+# PHP-FPM Production Overrides
+#==============================================================================
+
 
 [www]
 ; Use static process manager for predictable resource usage
