--- a/src/php/full.ini
+++ b/src/php/full.ini
@@ -1,4 +1,7 @@
-# PHP Configuration for Full Testing
+#==============================================================================
+# PHP Configuration for Full 
+#==============================================================================
+
 [PHP]
 ; Basic settings
 max_execution_time = 600
