--- a/src/supervisor/conf.d/apache2.conf
+++ b/src/supervisor/conf.d/apache2.conf
@@ -1,4 +1,7 @@
-; Apache2 configuration
+#==============================================================================
+# Apache2 configuration
+#==============================================================================
+
 [program:apache2]
 autorestart=unexpected
 autostart=true
