--- a/src/supervisor/conf.d/php-fpm.conf
+++ b/src/supervisor/conf.d/php-fpm.conf
@@ -1,4 +1,7 @@
-; PHP-FPM Configuration
+#==============================================================================
+# PHP-FPM Configuration
+#==============================================================================
+
 [program:php-fpm]
 autorestart=unexpected
 autostart=true
