--- a/src/supervisor/conf.d/queue.conf
+++ b/src/supervisor/conf.d/queue.conf
@@ -1,4 +1,7 @@
-; Yii2 Queue Worker Configuration
+#==============================================================================
+# Yii2 Queue Worker Configuration
+#==============================================================================
+
 ; Uncomment and configure if using yii2-queue
 
 ; [program:yii-queue-worker]
