--- a/src/supervisor/supervisord.conf
+++ b/src/supervisor/supervisord.conf
@@ -1,3 +1,7 @@
+#==============================================================================
+# Supervisord Configuration
+#==============================================================================
+
 [unix_http_server]
 chmod=0700
 file=/var/run/supervisor.sock
