--- a/src/php/xdebug.ini
+++ b/src/php/xdebug.ini
@@ -1,4 +1,6 @@
-; Xdebug configuration
+#==============================================================================
+# Xdebug configuration
+#==============================================================================
 zend_extension=xdebug.so
 xdebug.mode = debug,develop,coverage
 xdebug.client_host = host.docker.internal
