feat(apache): Update Apache configuration files for improved security and performance, including new virtual host and PHP-FPM proxy settings.

--- a/src/php-fpm/prod.conf
+++ b/src/php-fpm/prod.conf
@@ -1,7 +1,6 @@
-#==============================================================================
-# PHP-FPM Production Overrides
-#==============================================================================
-
+;==============================================================================
+; PHP-FPM Production Overrides
+;==============================================================================
 
 [www]
 ; Use static process manager for predictable resource usage
