--- a/src/php/full.ini
+++ b/src/php/full.ini
@@ -1,6 +1,6 @@
-#==============================================================================
-# PHP Configuration for Full 
-#==============================================================================
+;==============================================================================
+; PHP Configuration for Full
+;==============================================================================
 
 [PHP]
 ; Basic settings
