--- a/src/php-fpm/docker.conf
+++ b/src/php-fpm/docker.conf
@@ -1,63 +1,63 @@
-#==============================================================================
-# PHP-FPM Docker Configuration
-#==============================================================================
+;==============================================================================
+; PHP-FPM Docker Configuration - Optimized
+;==============================================================================
 
 [global]
 daemonize = no
 error_log = /proc/self/fd/2
 log_level = warning
+; Process control timeout for systemd compatibility
+process_control_timeout = 10
 
 [www]
-; Socket configuration
-listen = 127.0.0.1:9000
-listen.allowed_clients = 127.0.0.1
+; Unix socket is faster and more secure for local communication
+listen = /var/run/php/php-fpm.sock
+listen.owner = www-data
+listen.group = www-data
+listen.mode = 0660
 
-; Process management
+; Process management - Optimized for containers
 pm = dynamic
-pm.max_children = 20
-pm.start_servers = 2
-pm.min_spare_servers = 1
-pm.max_spare_servers = 3
-pm.max_requests = 500
+pm.max_children = ${PHP_FPM_MAX_CHILDREN:-20}
+pm.start_servers = ${PHP_FPM_START_SERVERS:-2}
+pm.min_spare_servers = ${PHP_FPM_MIN_SPARE:-1}
+pm.max_spare_servers = ${PHP_FPM_MAX_SPARE:-3}
+pm.max_requests = ${PHP_FPM_MAX_REQUESTS:-500}
+pm.process_idle_timeout = 10s
 
-; Status monitoring
+; Status monitoring (dev/test only)
 ping.path = /fpm-ping
+ping.response = pong
 pm.status_path = /fpm-status
 
-; Timeouts
-request_slowlog_timeout = 10s
-request_terminate_timeout = 30
+; Request handling
+request_slowlog_timeout = ${PHP_SLOWLOG_TIMEOUT:-5s}
+request_terminate_timeout = ${PHP_REQUEST_TIMEOUT:-30}
 slowlog = /proc/self/fd/2
 
-; PHP Settings via FPM
-php_admin_flag[display_errors] = on
+; PHP Settings
+php_admin_flag[display_errors] = ${PHP_DISPLAY_ERRORS:-off}
 php_admin_flag[log_errors] = on
 php_admin_value[error_log] = /proc/self/fd/2
-php_admin_value[max_execution_time] = 60
-php_admin_value[max_input_time] = 60
-php_admin_value[memory_limit] = 512M
-php_admin_value[post_max_size] = 100M
-php_admin_value[upload_max_filesize] = 100M
+php_admin_value[error_reporting] = ${PHP_ERROR_REPORTING:-E_ALL & ~E_DEPRECATED & ~E_STRICT}
+php_admin_value[max_execution_time] = ${PHP_MAX_EXECUTION_TIME:-30}
+php_admin_value[memory_limit] = ${PHP_MEMORY_LIMIT:-256M}
+php_admin_value[post_max_size] = ${PHP_POST_MAX_SIZE:-50M}
+php_admin_value[upload_max_filesize] = ${PHP_UPLOAD_MAX_FILESIZE:-50M}
 
-; Session path
-php_value[session.save_path] = /var/lib/php/sessions
+; Session configuration
+php_value[session.save_handler] = ${PHP_SESSION_HANDLER:-files}
+php_value[session.save_path] = ${PHP_SESSION_PATH:-/var/lib/php/sessions}
 
-; Temp directories
-php_value[sys_temp_dir] = /var/lib/php/tmp
-php_value[upload_tmp_dir] = /var/lib/php/tmp
+; Security
+php_admin_value[expose_php] = off
+php_admin_value[cgi.fix_pathinfo] = 0
 
 ; Output
-php_value[output_buffering] = 4096
-
-; Logging
-access.log = /proc/self/fd/1
-access.format = "%R - %u %t \"%m %r%Q%q\" %s %{mili}d %{kilo}M %C%%"
-catch_workers_output = yes
+catch_workers_output = ${PHP_CATCH_OUTPUT:-yes}
 decorate_workers_output = no
-
-; Clear environment
 clear_env = no
 
-; Limits
+; Resource limits
+rlimit_files = ${PHP_RLIMIT_FILES:-131072}
 rlimit_core = 0
-rlimit_files = 131072
