--- a/src/php/dev.ini
+++ b/src/php/dev.ini
@@ -1,6 +1,6 @@
-#==============================================================================
-# PHP Configuration for Development
-#==============================================================================
+;==============================================================================
+; PHP Configuration for Development
+;==============================================================================
 
 [PHP]
 ; Basic settings
