--- a/src/php/prod.ini
+++ b/src/php/prod.ini
@@ -1,6 +1,6 @@
-#==============================================================================
-# PHP Configuration for Production
-#==============================================================================
+;==============================================================================
+; PHP Configuration for Production
+;==============================================================================
 
 [PHP]
 ; Basic settings
