--- a/src/php/xdebug.ini
+++ b/src/php/xdebug.ini
@@ -1,11 +1,12 @@
-#==============================================================================
-# Xdebug configuration
-#==============================================================================
-zend_extension=xdebug.so
-xdebug.mode = debug,develop,coverage
+;==============================================================================
+; Xdebug configuration
+;==============================================================================
+
 xdebug.client_host = host.docker.internal
 xdebug.client_port = 9003
-xdebug.start_with_request = yes
-xdebug.idekey = PHPSTORM
 xdebug.discover_client_host = 0
+xdebug.idekey = PHPSTORM
 xdebug.log_level = 0
+xdebug.mode = debug,develop,coverage
+xdebug.start_with_request = yes
+zend_extension=xdebug.so
